<?xml version="1.0"?>
<package format="3">
  <name>lidar_graph_slam</name>
  <version>0.1.0</version>
  <description>The lidar_graph_slam package</description>
  <maintainer email="ryu.yamamoto@tier4.jp">RyuYamamoto</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>lidar_graph_slam_msgs</depend>
  <depend>lidar_graph_slam_utils</depend>
  <depend>lidar_scan_matcher</depend>
  <depend>points_prefiltering</depend>
  <depend>graph_based_slam</depend>
  <depend>lidar_graph_slam_viewer</depend>

  <exec_depend>launch_ros</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
